2020-11-13  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pk-val.c (pk_val_mapped_p): Update the criteria to
	decide when a value is mapped.
	* libpoke/libpoke.h (PK_PRINT_F_MAPS): Define.
	(PK_PRINT_F_PPRINT): Likewise.
	* libpoke/libpoke.c (pk_print_val_with_params): New function.
	* testsuite/poke.mi-json/mi-json.c (test_json_file): Do not skip
	array tests anymore.

2020-11-13  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.map/ass-map-17.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add test.
	* doc/poke.texi (Assignments): Document that maps in l-value can
	be of any type.

2020-11-12  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_array): Optimize.

2020-11-12  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd.c (pk_cmd_exec_1): Support commas in string
	arguments that are at the end of the argument list.

2020-11-12  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_array): Install a writer in arrays
	built from literals.
	* libpoke/pvm-val.c (pvm_val_reloc): Fix setting mapped_p in arrays.
	* testsuite/poke.map/ass-map-12.pk: New test.
	* testsuite/poke.map/ass-map-13.pk: Likewise.
	* testsuite/poke.map/ass-map-14.pk: Likewise.
	* testsuite/poke.map/ass-map-15.pk: Likewise.
	* testsuite/poke.map/ass-map-16.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2020-11-12  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-val.c (pvm_sizeof): Closure values have size zero by
	convention.

2020-11-12  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-val.c (pvm_val_reloc): Fix calculation of new
	boffset for contained structs.
	* testsuite/poke.map/ass-map-9.pk: New test.
	* testsuite/poke.map/ass-map-10.pk: Likewise.
	* testsuite/poke.map/ass-map-11.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2020-11-12  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_ps_scons): Subpass on scons_type
	instead of calling the constructor closure directly.