@@ -1,5 +1,13 @@
 2020-11-13  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pvm-val.c (pvm_val_equal_p): Do not include mapper and
+	writer closures in the comparison criteria for arrays.
+
+	* testsuite/poke.libpoke/values.c (test_pk_equal_file): Print
+	details when a test fails.
+
+2020-11-13  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pk-val.c (pk_val_mapped_p): Update the criteria to
 	decide when a value is mapped.
 	* libpoke/libpoke.h (PK_PRINT_F_MAPS): Define.
